# advent-of-code

./: .gitignore  README.md
2021/: day0X.ipynb  dayXX.ipynb  setup.cfg
2021/day01/: day01.ipynb
2021/day02/: day02.ipynb
2021/day03/: day03.ipynb
2021/day04/: day04.ipynb
2021/day05/: day05.ipynb
2021/day06/: day06.ipynb
2021/day07/: day07.ipynb
2021/day08/: day08.ipynb
2021/day09/: day09.ipynb
2021/day10/: day10.ipynb
2021/day11/: day11.ipynb
2021/day12/: day12.ipynb
2021/day13/: day13.ipynb
2021/day14/: day14.ipynb
2021/day16/: day16.ipynb
2021/day17/: day17.ipynb
2021/day19/: day19.ipynb
2021/day20/: day20.ipynb
2021/day21/: day21.ipynb
2021/day22/: day22.ipynb
2021/src/aoc2021/: util.py
2022/: main.hs
2022/day01/: main.hs
2022/day02/: main.hs
2022/day03/: main.hs
2022/day04/: main.hs
