[metadata]
name = aoc2021
description = Advent of Code 2021
long_description = file: README.md
long_description_content_type = text/markdown
author = Carlos Les

[options]
packages = find:
package_dir =
    =src
python_requires = >= 3.10
install_requires = notebook, more-itertools

[options.packages.find]
where = src
include = aoc2021, aoc2021.*
